# ns_lame_detector

./: README.rst  bulk_report.csv  domains  ns_lame_detector.py  pyproject.toml  requirements.txt  sitting_duck_lame_detector.sh
tests/: query_test.py
